# simple-search

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/ads/: __init__.py  auction.py  auth.py  errors.py  models.py  routes.py  service.py  storage.py  throttle.py
app/api/: deps.py
app/backends/: base.py  mocks.py  search_router.py
app/core/: __init__.py  cache.py  circuit_breaker.py  config.py  csrf.py  errors.py  i18n.py  ids.py  logging.py  rate_limit.py  security_headers.py
app/search/: __init__.py  normalizer.py  ranking.py  registry.py  router.py  schemas.py
app/ui/: __init__.py  routes.py
docs/: api.md  architecture.md  backend-adapters.md  deployment.md  i18n-rtl.md  search-router.md
tests/: conftest.py
tests/fixtures/: search_router_web.json
tests/integration/: test_ads_cabinet.py  test_ads_disabled.py  test_ads_security.py  test_api_image_search.py  test_api_web_search.py  test_health_and_backends.py  test_image_search_cache_paths.py  test_middleware.py  test_perf_responses.py  test_routing_fallback.py
tests/ui/: test_render.py
tests/unit/: test_admin_auth.py  test_admin_failclosed.py  test_auction.py  test_auth_hash.py  test_base_backend.py  test_cache.py  test_cache_redis.py  test_circuit_breaker.py  test_config.py  test_csrf_origin.py  test_i18n.py  test_ids.py  test_logging.py  test_login_throttle.py  test_misc_paths.py  test_mocks.py  test_normalizer.py  test_perf_app_factory.py  test_perf_optimizations.py  test_phrase_pool_cache.py  test_ranking.py  test_rate_limit.py  test_registry.py  test_response_cap.py  test_routing.py  test_safe_url.py  test_schemas.py  test_search_router_adapter.py  test_xff_trust.py  (+2 more)
(+29 files in other folders)
