[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-search"
version = "1.0.0"
description = "Metasearch service with a pluggable Search Router backend and RTL-ready UI."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "search-router.com contributors" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "defusedxml>=0.7.1",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "aiosqlite>=0.20",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "fakeredis>=2.23",
    "anyio>=4",
]

[project.entry-points."search_service.backends"]
search_router = "app.backends.search_router:SearchRouterBackend"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "config.yaml", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RET", "PT", "RUF"]
ignore = ["B008", "RUF001", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "SIM117"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["redis.*", "fakeredis.*", "defusedxml.*", "aiosqlite.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error"]
